--- a/trung_thien_technology/package.json
+++ b/trung_thien_technology/package.json
@@ -17,13 +17,15 @@
     "react-bootstrap": "^2.8.0",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4",
+    "json-server": "^0.17.3",
     "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "json-server": "json-server -p 8081 -w db.json"
   },
   "eslintConfig": {
     "extends": [
