--- a/trung_thien_technology/package.json
+++ b/trung_thien_technology/package.json
@@ -4,20 +4,29 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.2",
+    "json-server": "^0.17.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-intl": "^6.4.4",
+    "react-multi-carousel": "^2.8.4",
+    "react-number-format": "^5.2.2",
+    "react-redux": "^8.1.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
-    "react-bootstrap": "^2.8.0",
+    "redux-persist": "^6.0.0",
     "sweetalert2": "^11.7.20",
     "web-vitals": "^2.1.4",
-    "json-server": "^0.17.3",
     "yup": "^1.2.0"
   },
   "scripts": {
@@ -46,6 +55,7 @@
     ]
   },
   "devDependencies": {
-    "mini-css-extract-plugin": "^2.7.6"
+    "mini-css-extract-plugin": "^2.7.6",
+    "react-paginate": "^8.2.0"
   }
 }
