--- a/trung_thien_technology/package.json
+++ b/trung_thien_technology/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@paypal/react-paypal-js": "^8.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +20,7 @@
     "react-intl": "^6.4.4",
     "react-multi-carousel": "^2.8.4",
     "react-number-format": "^5.2.2",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.1.2",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.14.2",
