--- a/trung_thien_technology/package.json
+++ b/trung_thien_technology/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "@paypal/react-paypal-js": "^8.1.1",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,6 +22,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.4",
+    "react-modal": "^3.16.1",
     "react-multi-carousel": "^2.8.4",
     "react-number-format": "^5.2.2",
     "react-paypal-button-v2": "^2.6.3",
